# winstons_hiccup

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
data/: README.md
docs/: Roadmap.md  Techincal_Overview.md  Techincal_overview.md
index/: README.md
results/dataset/: dataset_profile.md  dataset_stats.json
scripts/: download_archive.py  run_dataset_profile.py  run_parser.py  validate_run_parser.py
src/: README.md
src/parsing/: parser.py
src/preprocessing/: normalizer.py  tokenizer.py
